--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: body
-image: assets/img/DPS-large.jpg
+image: assets/img/DPS-large.png
 ---
 <!-- main index  -->
 {% include navbar.html %}
